--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				<img class="successImg" src="./images/xmz3.png" alt="">
 			</div>
 		</div>
-		<div class="footer">
+		<div class="my-footer">
 			<div class="footer-content">
 				<div class="left-footer">
 					<li>地&nbsp;&nbsp;&nbsp;&nbsp;址：湖南省长沙市芙蓉区荷花园街道远大一路280号湘域东方家园B-605房</li>
