--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="湖南智筑建筑科技有限公司，BIM，智筑建筑，智筑，湖南智筑，湖南智筑建筑">
 		<meta name="description" content="湖南智筑建筑科技有限公司，BIM，智筑建筑，智筑，湖南智筑，湖南智筑建筑">
+		<meta name="baidu-site-verification" content="HATitW4OrY" />
 		<title>湖南智筑建筑科技有限公司，BIM，智筑建筑，智筑，湖南智筑，湖南智筑建筑</title>
 		<meta http-equiv="Pragma" content="no-cache" />   
 		<meta http-equiv="Cache-Control" content="no-cache" />
