--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					"智筑科技"锐意进取、专注技术、服务专业，为中国建筑多家世界500强和中国500强企业提供了优质服务，服务案例遍布全国，涵盖商业综合体、电力工程、产业园区、民用建筑等多个领域。典型服务案例有"青岛安德烈斯蒂尔动力工具"、"广州西门子配变智能化工厂项目"等。</p>
 				</div>
 				<div class="myContent-info" id="product">
-					<img src="./images/aboutus.png" class="tip-img"  alt="产品与服务">
+					<img src="./images/products.png" class="tip-img"  alt="产品与服务">
 					<span class="title-bj">产品与服务</span>
 					<h3>智筑科技提供的产品与服务</h3>
 					<div class="cpandfw">
@@ -108,7 +108,7 @@
 					</div>
 				</div>
 				<div class="myContent-info" id="business">
-					<img src="./images/aboutus.png" class="tip-img"  alt="业务范围">
+					<img src="./images/business.png" class="tip-img"  alt="业务范围">
 					<span class="title-bj">业务范围</span>
 					<li>
 						<span class="ywContent">BIM全专业咨询服务</span>
@@ -162,14 +162,26 @@
 				</div>
 			</div>
 			<div class="myContent-info" id="success">
-				<img src="./images/aboutus.png" class="tip-img"  alt="成功案例">
+				<img src="./images/success.png" class="tip-img"  alt="成功案例">
 				<span class="title-bj">成功案例</span>
 				<img class="successImg" src="./images/cs3.png" alt="">
 				<img class="successImg" src="./images/qd1.png" alt="">
 				<img class="successImg" src="./images/qd2.png" alt="">
-				<img class="successImg" src="./images/xmz1.png" alt="">
 				<img class="successImg" src="./images/xmz2.png" alt="">
 				<img class="successImg" src="./images/xmz3.png" alt="">
+				<img class="successImg" src="./images/下载4.png" alt="">
+			</div>
+			<div class="myContent-info" id="friendship">
+				<img src="./images/links.png" class="tip-img"  alt="友情链接">
+				<span class="title-bj">友情链接</span>
+				<div class="yqontent">
+					<li><a href="http://www.mohurd.gov.cn/">中华人民共和国住房和城乡建设部</a></li>
+					<li><a href="http://www.cscec.com.cn/">中国建筑</a></li>
+					<li><a href="http://www.chinabim.com/">中国BIM门户</a></li>
+					<li><a href="http://www.hnadi.com.cn/">湖南省建筑设计院</a></li>
+					<li><a href="http://www.hn-bim.cn/">湖南省BIM联盟</a></li>
+					<li><a href="http://www.chinabbc.com.cn/">中国国家企业信息网</a></li>
+				</div>
 			</div>
 		</div>
 		<div class="my-footer">
@@ -177,8 +189,8 @@
 				<div class="left-footer">
 					<li>地&nbsp;&nbsp;&nbsp;&nbsp;址：湖南省长沙市芙蓉区荷花园街道远大一路280号湘域东方家园B-605房</li>
 					<li>电&nbsp;&nbsp;&nbsp;&nbsp;话：18201251763</li>
-					<li>邮&nbsp;&nbsp;&nbsp;&nbsp;箱：a1262708706.com@qq.com</li>
-					<li>备案号：<img src="./images/ba.png" />湘ICP备20009240号</li>
+					<li>邮&nbsp;&nbsp;&nbsp;&nbsp;箱：18201251763@163.com</li>
+					<li>备案号：<a href="http://beian.miit.gov.cn"><img src="./images/ba.png" />湘ICP备20009240号</a></li>
 				</div>
 				<div class="right-footer">
 					<img src="./images/wx.jpg" alt="">
