--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 			<div class="mycontent">
-				<img src="./images/banner1.png" id="headerImg">
+				<img src="./images/banner2.png" id="headerImg">
 				<div class="myContent-info" id="aboutus">
 					<img src="./images/aboutus.png" class="tip-img" alt="关于我们">
 					<span class="title-bj">关于我们</span>
@@ -170,6 +170,13 @@
 				<img class="successImg" src="./images/xmz2.png" alt="">
 				<img class="successImg" src="./images/xmz3.png" alt="">
 				<img class="successImg" src="./images/下载4.png" alt="">
+			</div>
+			<div class="myContent-info" id="news">
+				<img src="./images/links.png" class="tip-img"  alt="行业动态">
+				<span class="title-bj">行业动态</span>
+				<div class="newsList" id="newsList">
+					
+				</div>
 			</div>
 			<div class="myContent-info" id="friendship">
 				<img src="./images/links.png" class="tip-img"  alt="友情链接">
