--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<img class="successImg" src="./images/下载4.png" alt="">
 			</div>
 			<div class="myContent-info" id="news">
-				<img src="./images/links.png" class="tip-img"  alt="行业动态">
+				<img src="./images/news.png" class="tip-img"  alt="行业动态">
 				<span class="title-bj">行业动态</span>
 				<div class="newsList" id="newsList">
 					
