--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
 					<img src="./images/aboutus.png" class="tip-img" alt="关于我们">
 					<span class="title-bj">关于我们</span>
 					<h3>全过程咨询+BIM咨询+BIM软件的专业服务公司</h3>
-					<p>湖南智筑建筑科技有限公司，以下简称"智筑科技"。"智筑科技"是一家专注于工程建设领域信息化的咨询及研发企业。智筑科技成立于2020年，经营业务包括以下几方面。建筑装饰材料的研发；建筑智能化建设工程软件开发；建筑行业建筑工程、建筑装饰工程、综合支架、管廊支架设计；动漫及衍生产品设计服务；工程咨询；工程技术咨询服务；工程项目管理服务；工程建设项目招标代理服务；工程技术服务；建材、综合支架、管廊支架的销售；软件批发；软件零售；软件技术服务；广告制作服务；广告发布服务；广告国内代理服务；广告设计；音乐及视频产品互联网销售；音频和视频设备租赁。
-					"智筑科技"锐意进取、专注技术、服务专业，为中国建筑多家世界500强和中国500强企业提供了优质服务，服务案例遍布全国，涵盖商业综合体、电力工程、产业园区、民用建筑等多个领域。典型服务案例有"青岛安德烈斯蒂尔动力工具"、"广州西门子配变智能化工厂项目"等。</p>
-				</div>
+					<p>湖南智筑建筑科技有限公司，以下简称"智筑科技"。"智筑科技"是一家专注于工程建设（AEC）领域信息化解决方案的公司。致力于建筑产品在咨询、设计、建造、运营阶段的大数据收集/分析/应用。
+						公司拥有专业化的BIM服务队伍，以及基于BIM、移动互联网、云计算等最新技术提供的一系列专业解决方案。</p>
+					<p>公司技术实力雄厚，核心团队均来自于世界五百强企业，具有完备的系统设计和项目管理经验。参与并领导了多个基于 BIM 技术的工程建设，并成功地为多个业主和施工单位提供BIM咨询服务，涵盖工业厂区、商业综合体、民用建筑、基础设施、电力建设、生态环保、铝模装配式等领域。</p>
+					</div>
 				<div class="myContent-info" id="product">
 					<img src="./images/products.png" class="tip-img"  alt="产品与服务">
 					<span class="title-bj">产品与服务</span>
