新增基础产品

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						公司拥有专业化的BIM服务队伍，以及基于BIM、移动互联网、云计算等最新技术提供的一系列专业解决方案。</p>
 					<p>公司技术实力雄厚，核心团队均来自于世界五百强企业，具有完备的系统设计和项目管理经验。参与并领导了多个基于 BIM 技术的工程建设，并成功地为多个业主和施工单位提供BIM咨询服务，涵盖工业厂区、商业综合体、民用建筑、基础设施、电力建设、生态环保、铝模装配式等领域。</p>
 					</div>
-				<div class="myContent-info" id="product">
+				<div class="myContent-info" id="product" onclick="openPage()">
 					<img src="./images/products.png" class="tip-img"  alt="产品与服务">
 					<span class="title-bj">产品与服务</span>
 					<h3>智筑科技提供的产品与服务</h3>
@@ -76,7 +76,7 @@
 							</div>
 							<div class="list-propduct-title">BIM 咨询服务</div>
 							<div class="list-propduct-content">
-								提供专业BIM咨询服务，包含BIM全过程咨询管理、BIM全专业建模、机电专业深化、电力BIM指导、BIM精装深化等，涵盖工业厂区、会展中心、轨道交通、综合体、产业园区、商务楼、民用建筑等领域。 
+								提供专业BIM咨询服务，包含BIM全过程咨询管理、BIM全专业建模、机电专业深化、电力BIM指导、BIM铝模配模与深化、BIM装配式建模与深化、BIM精装建模与深化、BIM钢结构建模与深化等，涵盖工业厂区、会展中心、轨道交通、综合体、产业园区、商务楼、民用建筑等领域。  
 							</div>
 						</div>
 						<div class="list-product">
