--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 			<div class="mycontent">
-				<img src="./images/banner2.png" id="headerImg">
+				<img src="./images/banner5.png" id="headerImg">
+				<div class="leftArrow" id="leftArrow">
+				</div>
+				<div class="rightArrow" id="rightArrow">
+				</div>
 				<div class="myContent-info" id="aboutus">
 					<img src="./images/aboutus.png" class="tip-img" alt="关于我们">
 					<span class="title-bj">关于我们</span>
