--- a/product.html
+++ b/product.html
@@ -47,7 +47,7 @@
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
-							<li id="homeSelect" class="navli"><a href="#">首页</a></li>
+							<li id="homeSelect" class="navli"><a href="/index.html">首页</a></li>
 							<li id="aboutSelect" class="navli"><a href="#aboutus">关于公司</a></li>
 							<li id="saleSelect" class="navli active"><a href="#product">产品与服务</a></li>
 							<li id="contactSelect" class="navli"><a href="#business">业务范围</a></li>
@@ -64,13 +64,90 @@
                     <div class="productLeft">
                         <h2>智筑咨询</h2>
                         <p>提供专业BIM咨询服务，包含BIM全过程咨询管理、BIM全专业建模、机电专业深化、电力BIM指导、BIM铝模配模与深化、BIM装配式建模与深化、BIM精装建模与深化、BIM钢结构建模与深化等，涵盖工业厂区、会展中心、轨道交通、综合体、产业园区、商务楼、民用建筑等领域。</p>
-                        <div class="connectNow">立即联系</div>
+                        <div class="connectNow">立即联系 18201251763（罗）</div>
                     </div>
                     <div class="productRight">
                         <img src="images/pro1.png" />
-                    </div>
-                </div>
-            </div>
+					</div>
+					<div class="cpPic">
+						<img src="images/anli1.png" />
+						<img src="images/anli2.png" />
+						<img src="images/anli3.png" />
+					</div>
+					<div class="productDetail">
+						<div class="listTitle">
+							<a href="#yewufanwei" class="detailType activeDetailType">业务范围</a>
+							<a href="#anlijieshao" class="detailType">案例介绍</a>
+						</div>
+						<div class="detailContent">
+							<div id="yewufanwei">
+								<div class="myTitle"><span class="rectangle"></span>业务范围</div>
+								<li>BIM审查系统咨询服务</li>
+								<li>BIM全专业咨询服务 </li>
+								<li>BIM全专业建模服务 </li>
+								<li>专业机房和复杂区域深化服务</li>
+								<li>BIM实施标准和方案制度</li>
+								<li>BIM设计图纸审核</li>
+								<li>BIM碰撞检查，深化设计，管线综合，净空分析，工艺模拟</li>
+								<li>BIM进度、质量、安全、合同变更管理</li>
+								<li>驻场BIM服务</li>
+								<li>BIM铝模配模与深化BIM装配式建模与深化</li>
+								<li>BIM钢结构建模与深化</li>
+							</div>
+							<div id="anlijieshao">
+								<div class="myTitle"><span class="rectangle"></span>案例介绍</div>
+								<div class="anliItem">
+									<img class="leftAnliContent" src="/images/anli1.png" alt="">
+									<div class="rightAnliContent">
+										<div class="xmTitle">安德烈斯蒂尔年产350万台园林机械工具项目</div>
+										<div class="xmgk">
+											<span class="titleNr">项目概况：</span> 安德烈斯蒂尔动力工具（青岛）有限公司三期项目位于青岛出口加工区,为现有厂区内新建项目,
+											本期为三期项目，本工程为施工总承包工程，共有5个单体，总建筑面积24151㎡。
+											</div>
+										<div class="hxyyd">
+											<span class="titleNr">核心应用点：</span>
+											1.设计优化：综合排布、净高调整、洞口核对、荷载验算、布局规划。通过设计优化，解决管线施工困难、吊挂荷载不够、办公环境舒适度不够等问题。
+											2.工艺优化：预制化机房、机电设备三维设计、风管虹吸雨水管安装形式、施工模拟，利用工艺优化，大幅减少机房内焊接作业施工，管道设备在厂家加工好，到现场直接拼装，同时利用三维视频指导施工。
+											3.措施优化：二维码、无人机、VR体验、BIM5D-PDCA循环进度管理，通过各种新手段提供现场管理效率，提升项目整体形象。
+										</div>
+									</div>
+								</div>
+								<div class="anliItem">
+									<img class="leftAnliContent" src="/images/anli2.png" alt="">
+									<div class="rightAnliContent">
+										<div class="xmTitle">广州西门子配变智能化工厂项目</div>
+										<div class="xmgk">
+											<span class="titleNr">项目概况：</span> 广州西门子配变智能化工厂项目位于广州市黄埔区永和街道禾丰三街与禾丰四街之间，
+											北侧为永盛路，南侧为永和大道。建筑面积约为24000㎡。</div>
+										<div class="hxyyd">
+											<span class="titleNr">核心应用点：</span>
+											1.形象设计：对项目工地外貌现场办公室、现场门卫室、场标牌整体形象进行设计。
+											2.管网优化：室外管网优化前提前制定优化方案，确定管线大致间距，同时建立各类井室模型。
+											3.钢结构优化：优化钢梁截面，确定檩条间距，优化细部节点，确保结构设计安全可靠。
+											4.机电优化：管线综合、预留洞口、支架设计与荷载加固。优化管线路由，进行成品支架布置，直接出图指导施工。
+										</div>
+									</div>
+								</div>
+								<div class="anliItem">
+									<img class="leftAnliContent" src="/images/anli3.png" alt="">
+									<div class="rightAnliContent">
+										<div class="xmTitle">江门高尔夫周边地块4#地住宅楼。
+										</div>
+										<div class="xmgk">
+											<span class="titleNr">项目概况：</span> 本工程位于江门市蓬江区江门市北环路银葵高尔夫场周边，总用地面积27852.73㎡，总建筑面积304514.06㎡。</div>
+										<div class="hxyyd">
+											<span class="titleNr">核心应用点：</span>
+											针对该项目，我方对施工图进行全面梳理，建立索引，制定BIM建模计划；建立项目专用族库及土建机电样板；对建筑、结构、机电模型进行创建并整合，对图纸存疑部分形成问题报告。
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+			</div>
+			
 		</div>
 		<div class="my-footer">
 			<div class="footer-content">
@@ -87,6 +164,6 @@
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="./common.js"></script>
+		<script type="text/javascript" src="./product.js"></script>
 	</body>
 </html>
