--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
-							<li id="homeSelect" class="navli active"><a href="#">首页</a></li>
-							<li id="aboutSelect" class="navli"><a href="#aboutus">关于公司</a></li>
-							<li id="saleSelect" class="navli"><a href="#product">产品与服务</a></li>
-							<li id="contactSelect" class="navli"><a href="#business">业务范围</a></li>
-							<li id="contactSelect" class="navli"><a href="#success">成功案例</a></li>
+							<li id="homeSelect" class="navli active"><a href="/index.html#">首页</a></li>
+							<li id="aboutSelect" class="navli"><a href="/index.html#aboutus">关于公司</a></li>
+							<li id="saleSelect" class="navli"><a href="/index.html#product">产品与服务</a></li>
+							<li id="contactSelect" class="navli"><a href="/index.html#business">业务范围</a></li>
+							<li id="contactSelect" class="navli"><a href="/index.html#success">成功案例</a></li>
 						</ul>
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
@@ -69,12 +69,12 @@
 						公司拥有专业化的BIM服务队伍，以及基于BIM、移动互联网、云计算等最新技术提供的一系列专业解决方案。</p>
 					<p>公司技术实力雄厚，核心团队均来自于世界五百强企业，具有完备的系统设计和项目管理经验。参与并领导了多个基于 BIM 技术的工程建设，并成功地为多个业主和施工单位提供BIM咨询服务，涵盖工业厂区、商业综合体、民用建筑、基础设施、电力建设、生态环保、铝模装配式等领域。</p>
 					</div>
-				<div class="myContent-info" id="product" onclick="openPage()">
+				<div class="myContent-info" id="product">
 					<img src="./images/products.png" class="tip-img"  alt="产品与服务">
 					<span class="title-bj">产品与服务</span>
 					<h3>智筑科技提供的产品与服务</h3>
 					<div class="cpandfw">
-						<div class="list-product">
+						<div class="list-product" onclick="openPage('./product.html')">
 							<div class="list-propduct-logo">
 								<img src="./images/pro1.png" alt="">
 							</div>
@@ -83,7 +83,7 @@
 								提供专业BIM咨询服务，包含BIM全过程咨询管理、BIM全专业建模、机电专业深化、电力BIM指导、BIM铝模配模与深化、BIM装配式建模与深化、BIM精装建模与深化、BIM钢结构建模与深化等，涵盖工业厂区、会展中心、轨道交通、综合体、产业园区、商务楼、民用建筑等领域。  
 							</div>
 						</div>
-						<div class="list-product">
+						<div class="list-product" onclick="openPage('./video.html')">
 							<div class="list-propduct-logo">
 								<img src="./images/pro2.png" alt="">
 							</div>
@@ -92,7 +92,7 @@
 								制作企业宣传视频，招投标视频，施工模拟视频，进度模拟视频，高效沟通，如期完成各类投标、工艺技术演示BIM动画。制作家装、工装效果图、项目整体鸟瞰效果图等。
 							</div>
 						</div>
-						<div class="list-product">
+						<div class="list-product" >
 							<div class="list-propduct-logo">
 								<img src="./images/pro3.png" alt="">
 							</div>
