--- a/product.html
+++ b/product.html
@@ -48,10 +48,10 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
 							<li id="homeSelect" class="navli"><a href="/index.html">首页</a></li>
-							<li id="aboutSelect" class="navli"><a href="#aboutus">关于公司</a></li>
-							<li id="saleSelect" class="navli active"><a href="#product">产品与服务</a></li>
-							<li id="contactSelect" class="navli"><a href="#business">业务范围</a></li>
-							<li id="contactSelect" class="navli"><a href="#success">成功案例</a></li>
+							<li id="aboutSelect" class="navli"><a href="/index.html#aboutus">关于公司</a></li>
+							<li id="saleSelect" class="navli active"><a href="/index.html#product">产品与服务</a></li>
+							<li id="contactSelect" class="navli"><a href="/index.html#business">业务范围</a></li>
+							<li id="contactSelect" class="navli"><a href="/index.html#success">成功案例</a></li>
 						</ul>
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
