新的提交增加弹框

--- a/index.html
+++ b/index.html
@@ -209,6 +209,24 @@
 				</div>
 			</div>
 		</div>
+		<div class="openpopup" onclick="openContact()">
+			联系我们
+		</div>
+		<div class='contactBox' id="contactBox">
+			<div class="header">
+				湖南智筑建筑科技有限公司
+				<span class='closeBox' onclick="closeContact()">×</span>
+			</div>
+			<div class="callBox">
+				<div class='callWx'>
+					<img src='/images/wx.jpg'>
+				</div>
+				<div class="callPhone">
+					<p>联系电话：18201251763 (罗)</p>
+					<p>联系电话：18900721335 (吴)</p>
+				</div>
+			</div>
+		</div>
 		<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="./common.js"></script>
